--- a/05-python.ipynb
+++ b/05-python.ipynb
@@ -452,11 +452,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "NMjbie-oP1kV",
-        "outputId": "bd690986-d9ee-47d4-f275-360d982ac231",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NMjbie-oP1kV",
+        "outputId": "bd690986-d9ee-47d4-f275-360d982ac231"
       },
       "outputs": [
         {
@@ -696,11 +696,11 @@
         "print(f\"{kocha} ko'chasi, {mahalla} mahallasi, {tuman} tumani, {viloyat} viloyati\")"
       ],
       "metadata": {
-        "id": "kc2CCQIZQHbj",
-        "outputId": "ffc76392-510a-4ff0-b906-648cae8050e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kc2CCQIZQHbj",
+        "outputId": "ffc76392-510a-4ff0-b906-648cae8050e8"
       },
       "execution_count": 8,
       "outputs": [
@@ -727,11 +727,11 @@
         "print(f\"{kocha} ko'chasi, {mahalla} mahallasi, {tuman} tumani, {viloyat} viloyati\")"
       ],
       "metadata": {
-        "id": "oT1XCQw0QqBr",
-        "outputId": "ff074dac-ae8e-4f4b-d49e-646944cacf63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oT1XCQw0QqBr",
+        "outputId": "ff074dac-ae8e-4f4b-d49e-646944cacf63"
       },
       "execution_count": 10,
       "outputs": [
@@ -754,11 +754,11 @@
         "print(f\"{kocha} ko'chasi,\\n{mahalla} mahallasi,\\n{tuman} tumani,\\n{viloyat} viloyati\")"
       ],
       "metadata": {
-        "id": "Ls846YCvSTsF",
-        "outputId": "2fd9d333-b9b2-446c-e78a-c030d9aa6815",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ls846YCvSTsF",
+        "outputId": "2fd9d333-b9b2-446c-e78a-c030d9aa6815"
       },
       "execution_count": 12,
       "outputs": [
@@ -770,6 +770,37 @@
             "Rakat mahallasi,\n",
             "Yakkasaroy tumani,\n",
             "Toshkent viloyati\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "manzil = f\"{kocha} ko\\'chasi, {mahalla} mahallasi, {tuman} tumani, {viloyat} viloyati\"\n",
+        "\n",
+        "print(manzil.title())\n",
+        "print(manzil.upper())\n",
+        "print(manzil.lower())\n",
+        "print(manzil.capitalize())"
+      ],
+      "metadata": {
+        "id": "EwfNQGBdT3sy",
+        "outputId": "4c277f1f-a9e4-4259-cb82-4d24f2bf562b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tursunov Ko'Chasi, Rakat Mahallasi, Yakkasaroy Tumani, Toshkent Viloyati\n",
+            "TURSUNOV KO'CHASI, RAKAT MAHALLASI, YAKKASAROY TUMANI, TOSHKENT VILOYATI\n",
+            "tursunov ko'chasi, rakat mahallasi, yakkasaroy tumani, toshkent viloyati\n",
+            "Tursunov ko'chasi, rakat mahallasi, yakkasaroy tumani, toshkent viloyati\n"
           ]
         }
       ]
